--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,25 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredText"></textarea>
-  </mat-form-field>
-    <button mat-raised-button color='accent' (click)="onAddPost()">Save Post</button>
+  <form (submit)="onAddPost(saveForm)" #saveForm="ngForm">
+    <mat-form-field>
+      <input matInput type="text"
+      name="title"
+      ngModel
+      required
+      placeholder="Post Title"
+      #title="ngModel">
+      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+      <textarea matInput
+      rows="4"
+      name="desc"
+      ngModel
+      required
+      placeholder="Post Description"
+      #desc="ngModel"></textarea>
+      <mat-error *ngIf="desc.invalid">Please enter a post desc</mat-error>
+    </mat-form-field>
+    <button mat-raised-button color='accent' type="submit">Save Post</button>
+  </form>
 </mat-card>
 
