Edit Posts , Load Spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <post-header></post-header>
 <main>
-  <post-create></post-create>
-  <post-list></post-list>
+  <router-outlet></router-outlet>
 </main>
+
+
