--- a/src/app/posts/post-header/post-header.component.html
+++ b/src/app/posts/post-header/post-header.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="accent">
-    <h1>Post App</h1>
+    <span><a routerLink="/">Post App</a></span>
+    <span class="spacer"></span>
+    <ul>
+      <li>
+        <a mat-button routerLink="/create" routerLinkActive="mat-primary">New Post</a>
+      </li>
+    </ul>
 </mat-toolbar>
