--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,13 +1,14 @@
-<mat-accordion multi="true" *ngIf="posts.length>0">
-  <mat-expansion-panel *ngFor="let item of posts">
+<mat-spinner color="ThemePalette" *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length>0 && !isLoading">
+  <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-        {{item.title}}
+        {{post.title}}
     </mat-expansion-panel-header>
-        <p>{{item.desc}}</p>
+        <p>{{post.desc}}</p>
         <mat-action-row>
-          <button mat-button color="primary">EDIT</button>
-          <button mat-button color="warn">DELETE</button>
+          <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+          <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
         </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="cent mat-body-1" *ngIf="posts.length<=0">Nothing here yet.</p>
+<p class="cent mat-body-1" *ngIf="posts.length<=0 && !isLoading">Nothing here yet.</p>
