--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,24 +1,27 @@
 <mat-card>
   <mat-spinner color="ThemePalette" *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(saveForm)" #saveForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
       <input matInput type="text"
-      name="title"
-      [ngModel]='post?.title'
-      required
-      placeholder="Post Title"
-      #title="ngModel">
-      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+      formControlName = "title"
+      placeholder="Post Title">
+      <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
       </mat-form-field>
+      <div>
+        <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+        <input type="file" #filePicker (change)="onImagePicked($event)">
+      </div>
+      <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+        <img [src]="imagePreview" [alt]="form.value.title">
+        <mat-error *ngIf="form.get('image').invalid">File Type selected is not an image</mat-error>
+      </div>
       <mat-form-field>
       <textarea matInput
+      formControlName = "desc"
       rows="4"
-      name="desc"
-      [ngModel]='post?.desc'
-      required
       placeholder="Post Description"
-      #desc="ngModel"></textarea>
-      <mat-error *ngIf="desc.invalid">Please enter a post desc</mat-error>
+      ></textarea>
+      <mat-error *ngIf="form.get('desc').invalid">Please enter a post desc</mat-error>
     </mat-form-field>
     <button mat-raised-button color='accent' type="submit">Save Post</button>
   </form>
