--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -14,4 +14,5 @@
         </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator [length]="totalPosts" [pageSize]="postPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onPageChange($event)" *ngIf="posts.length>0"></mat-paginator>
 <p class="cent mat-body-1" *ngIf="posts.length<=0 && !isLoading">Nothing here yet.</p>
