--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,14 +2,17 @@
     <span><a routerLink="/">Post App</a></span>
     <span class="spacer"></span>
     <ul>
-      <li>
+      <li *ngIf="userIsAuth">
         <a mat-button routerLink="/create" routerLinkActive="mat-primary">New Post</a>
       </li>
-      <li>
+      <li *ngIf="!userIsAuth">
         <a mat-button routerLink="/login" routerLinkActive="mat-primary">Login</a>
       </li>
-      <li>
+      <li *ngIf="!userIsAuth">
         <a mat-button routerLink="/signup" routerLinkActive="mat-primary">Signup</a>
+      </li>
+      <li *ngIf="userIsAuth">
+        <button mat-button>Logout</button>
       </li>
     </ul>
 </mat-toolbar>
