--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
         <a mat-button routerLink="/signup" routerLinkActive="mat-primary">Signup</a>
       </li>
       <li *ngIf="userIsAuth">
-        <button mat-button>Logout</button>
+        <button mat-button (click)="onLogout()">Logout</button>
       </li>
     </ul>
 </mat-toolbar>
